<?xml version="1.0"?>
<package format="2">
  <name>vectornav</name>
  <version>0.0.0</version>
  <description>The vectornav package</description>
  
  <maintainer email="shrijitsingh99@gmail.com">Shrijit Singh</maintainer>
  <license>MIT</license>
  <author email="shrijitsingh99@gmail.com">Shrijit Singh</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>

</package>
